# fwm

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  config.toml.default  config.toml.example  dev.sh  install.sh  main.c
.github/workflows/: ci.yml
session/: fwm-session  fwm.desktop
src/: bsp.c  bsp.h  config.c  config.h  defines.h  foreign.c  foreign.h  group.c  group.h  ipc.c  ipc.h  ipc_events.c  ipc_events.h  layer.c  layer.h  lock.c  lock.h  main.c  physics.c  physics.h  server.c  server.h  server_actions.c  server_config.c  server_desktop.c  server_input.c  server_internal.h  server_output.c  server_pointer.c  server_shell.c  session.c  session.h  theme.c  theme.h  video.c  video.h  view.c  view.h  wallpaper.c  wallpaper.h  (+4 more)
src/ui/: cairo_overlay.c  cairo_overlay.h  decorations.c  decorations.h  errors.c  errors.h  hints.c  hints.h  launcher.c  launcher.h  logo.c  logo.h  tray.c  tray.h  welcome.c  welcome.h
tests/: dynamic.sh  test.h  test_bsp.c  test_config.c  test_input.c  test_ipc_events.c
tools/: fwmctl.c  spawn_windows.c
